<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.add.AddActivity"
        android:padding="20dp">

    <ImageView
            android:id="@+id/image_add_story"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_place_holder"
            />

    <Button
            android:id="@+id/button_add_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_add_story"
            app:layout_constraintEnd_toStartOf="@id/button_add_camera"
            android:text="@string/gallery"
            />

    <Button
            android:id="@+id/button_add_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_add_story"
            app:layout_constraintStart_toEndOf="@id/button_add_gallery"
            android:text="@string/camera"
            />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_add_desc_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_add_submit"
            >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_add_desc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:id="@+id/button_add_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/submit"
            />
</androidx.constraintlayout.widget.ConstraintLayout>